[gd_scene load_steps=19 format=3 uid="uid://c3dcqlusuck1o"]

[ext_resource type="Script" path="res://joystick_settings.gd" id="1_k88yi"]
[ext_resource type="Texture2D" uid="uid://dv6kq7xq4op5j" path="res://Assets/Art/Joystick/joyring.png" id="2_06rbd"]
[ext_resource type="Texture2D" uid="uid://bxuyycfoi67p4" path="res://Assets/Art/Joystick/joyknobpng.png" id="3_3p73t"]
[ext_resource type="Theme" uid="uid://na1w3fkpwv6b" path="res://Themes/MainTheme.tres" id="4_ub2qh"]
[ext_resource type="StyleBox" uid="uid://c5oqyfkq3k315" path="res://Themes/roundedFlatStyleBox.tres" id="5_b6x0b"]
[ext_resource type="FontFile" uid="uid://dsclevxwkkq4o" path="res://Fonts/NovaSquare-Regular.ttf" id="6_id8ir"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_afvs3"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r74mj"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m1gr6"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fotyl"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bsxfl"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wq2ir"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gkkp2"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8n1cl"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_red0b"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uwsor"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xrdn5"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iq5aj"]
bg_color = Color(1, 1, 1, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="JoystickSettings" type="CanvasLayer"]
script = ExtResource("1_k88yi")

[node name="Joystick1" type="Node2D" parent="."]
position = Vector2(128, 504)
scale = Vector2(2, 2)

[node name="Ring" type="Sprite2D" parent="Joystick1"]
scale = Vector2(0.055, 0.055)
texture = ExtResource("2_06rbd")

[node name="Joystick1" type="Button" parent="Joystick1/Ring"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -960.0
offset_top = -960.0
offset_right = -960.0
offset_bottom = -960.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_afvs3")
theme_override_styles/hover = SubResource("StyleBoxFlat_r74mj")
theme_override_styles/pressed = SubResource("StyleBoxFlat_m1gr6")
theme_override_styles/focus = SubResource("StyleBoxFlat_fotyl")

[node name="Knob" type="Sprite2D" parent="Joystick1"]
scale = Vector2(0.02, 0.02)
texture = ExtResource("3_3p73t")

[node name="Joystick2" type="Node2D" parent="."]
position = Vector2(1024, 504)
scale = Vector2(2, 2)

[node name="Ring" type="Sprite2D" parent="Joystick2"]
scale = Vector2(0.055, 0.055)
texture = ExtResource("2_06rbd")

[node name="Joystick2" type="Button" parent="Joystick2/Ring"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -960.0
offset_top = -960.0
offset_right = -960.0
offset_bottom = -960.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_bsxfl")
theme_override_styles/hover = SubResource("StyleBoxFlat_wq2ir")
theme_override_styles/pressed = SubResource("StyleBoxFlat_gkkp2")
theme_override_styles/focus = SubResource("StyleBoxFlat_8n1cl")

[node name="Knob" type="Sprite2D" parent="Joystick2"]
scale = Vector2(0.02, 0.02)
texture = ExtResource("3_3p73t")

[node name="WeaponSelect" type="Button" parent="."]
process_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -136.0
offset_right = 83.0
offset_bottom = -75.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 1
theme = ExtResource("4_ub2qh")
theme_override_styles/normal = ExtResource("5_b6x0b")
theme_override_styles/hover = ExtResource("5_b6x0b")
theme_override_styles/pressed = ExtResource("5_b6x0b")
theme_override_styles/disabled = ExtResource("5_b6x0b")
theme_override_styles/focus = ExtResource("5_b6x0b")
text = "testing"
expand_icon = true

[node name="ResetButton" type="Button" parent="."]
offset_left = 24.0
offset_top = 40.0
offset_right = 290.0
offset_bottom = 91.0
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("6_id8ir")
theme_override_font_sizes/font_size = 38
theme_override_styles/normal = SubResource("StyleBoxFlat_red0b")
theme_override_styles/hover = SubResource("StyleBoxFlat_uwsor")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xrdn5")
theme_override_styles/focus = SubResource("StyleBoxFlat_iq5aj")
text = " Reset Layout "

[node name="DoneButton" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -145.0
offset_top = 40.0
offset_right = -22.0
offset_bottom = 91.0
grow_horizontal = 0
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("6_id8ir")
theme_override_font_sizes/font_size = 38
theme_override_styles/normal = SubResource("StyleBoxFlat_red0b")
theme_override_styles/hover = SubResource("StyleBoxFlat_uwsor")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xrdn5")
theme_override_styles/focus = SubResource("StyleBoxFlat_iq5aj")
text = " Done "

[connection signal="button_down" from="Joystick1/Ring/Joystick1" to="." method="_on_joystick_1_button_down" flags=18]
[connection signal="button_up" from="Joystick1/Ring/Joystick1" to="." method="_on_joystick_1_button_up" flags=18]
[connection signal="button_down" from="Joystick2/Ring/Joystick2" to="." method="_on_joystick_2_button_down" flags=18]
[connection signal="button_up" from="Joystick2/Ring/Joystick2" to="." method="_on_joystick_2_button_up" flags=18]
[connection signal="button_down" from="WeaponSelect" to="." method="_on_weapon_select_button_down" flags=18]
[connection signal="button_up" from="WeaponSelect" to="." method="_on_weapon_select_button_up" flags=18]
[connection signal="pressed" from="ResetButton" to="." method="_on_reset_button_pressed" flags=18]
[connection signal="pressed" from="DoneButton" to="." method="_on_done_button_pressed" flags=18]
